--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "flatpickr": "^4.6.13",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-flatpickr": "^4.0.11",
     "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.18"
   },
